<resources>
    <string name="app_name">Photo</string>
    <string name="hint_add">添加</string>
    <string name="hint_mine_photo">我的相簿</string>
    <string name="hint_auto">智能分类</string>
    <string name="info">详细信息</string>
    <string name="edit">编辑</string>
    <string name="new_name_folder">给新相册起一个名字</string>
    <string name="title">标题</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="details">详细信息</string>
    <string name="photo_name_title">照片名：</string>

    <string name="photo_size">%1$d * %2$d</string>
    <string name="create_time_title">创建时间：</string>
    <string name="path_title">存储路径：</string>
    <string name="size_title">大小：</string>
    <string name="size_num_title">尺寸：</string>
    <string name="crop">裁剪</string>
</resources>